--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -15,7 +15,7 @@
         },
         url = {
             createUpdateBacklogItens : '{{=URL("create_update_backlog_itens.json")}}',
-            removeBacklogItens : '{{=URL("remove_item_backlog_itens")}}',
+            removeBacklogItens : '{{=URL("remove_itens")}}',
             changeAjaxItens : '{{=URL("change_ajax_itens")}}',
         },
         buttons = {
